chat basics added
