# pkg/api/handler/interface/chat.go
@@ -1,6 +1,10 @@
 package handlerInterface
 
+import "github.com/gin-gonic/gin"
 
-type ChatHandler interface{
-
+type ChatHandler interface {
+	GetChats(c *gin.Context)
+	GetMessages(c *gin.Context)
+	SendMessage(c *gin.Context)
+	MakeMessageRead(c *gin.Context)
 }
